--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -134,7 +134,7 @@ body {
 
 
 .bg-grey-blue {
-  background-color: #B6C9CF;
+  background-color: #91BBC8;
 }
 .bg-sidebar {
   background-color: #347283;
@@ -143,7 +143,9 @@ body {
 .button-selected {
   background-color: #BCBFC7;
 }
-
+.bg-input {
+  background-color: #ffeac5 ;
+}
 .bg-dark-yellow {
   background-color: #D2A24E !important;
 }
@@ -159,7 +161,7 @@ body {
 }
 
 .bg-crimson:hover {
-  background-color: #B84444 !important;
+  background-color: #B84444 !important;  
 }
 
 .bg-crimson:active {
