--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -176,3 +176,11 @@ body {
 .bg-teal-blue:active {
   background-color: #083947 !important;
 }
+
+.bg-ice-cream:active {
+  background-color: #FFFDD0 !important;
+}
+
+.bg-ice-cream:hover {
+  background-color: #0b0033 !important;
+}
